# sbar-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: events.rs  lib.rs  main.rs  sketchybar.rs  state.rs  tests.rs
src/config/: mod.rs
src/helpers/: colors.rs  icons.rs  mod.rs  properties.rs  yabai.rs
src/items/: battery.rs  clock.rs  current_app.rs  keyboard.rs  mod.rs  space.rs  tests.rs  window.rs
