[package]
name = "sketchybar-daemon"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "sketchybar-daemon"
path = "src/main.rs"

[lib]
name = "sketchybar_daemon"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.41"
futures = "0.3"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sketchybar-rs = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
futures = "0.3"
